--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,8 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
-                    android:background="@drawable/article_item_bg"
-                    android:backgroundTint="@color/primaryColor">
+                    android:background="@drawable/article_item_bg">
 
                     <TextView
                         android:id="@+id/plan"
@@ -229,8 +228,7 @@
                     android:layout_height="wrap_content"
                     android:paddingVertical="16dp"
                     android:paddingStart="16dp"
-                    android:background="@drawable/article_item_bg"
-                    android:backgroundTint="@color/primaryColor">
+                    android:background="@drawable/article_item_bg">
 
                     <TextView
                         android:id="@+id/usage"
@@ -319,8 +317,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
-                    android:background="@drawable/article_item_bg"
-                    android:backgroundTint="@color/primaryColor">
+                    android:background="@drawable/article_item_bg">
 
                     <TextView
                         android:id="@+id/articles"
