--- a/app/src/main/res/layout/activity_detail_articles.xml
+++ b/app/src/main/res/layout/activity_detail_articles.xml
@@ -58,8 +58,7 @@
                     android:orientation="vertical"
                     android:background="@drawable/article_item_bg"
                     android:paddingHorizontal="14dp"
-                    android:paddingVertical="12dp"
-                    android:backgroundTint="@color/primaryColor">
+                    android:paddingVertical="12dp">
 
                     <TextView
                         android:id="@+id/title_article"
@@ -117,8 +116,7 @@
                     android:orientation="vertical"
                     android:background="@drawable/article_item_bg"
                     android:paddingHorizontal="14dp"
-                    android:paddingVertical="12dp"
-                    android:backgroundTint="@color/primaryColor">
+                    android:paddingVertical="12dp">
 
                     <TextView
                         android:id="@+id/desc_article"
