--- a/app/src/main/res/layout/articles_more_items.xml
+++ b/app/src/main/res/layout/articles_more_items.xml
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="16dp"
-        android:background="@drawable/article_item_bg"
-        android:backgroundTint="@color/primaryColor">
+        android:background="@drawable/article_item_bg">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_image"
