--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,6 +17,8 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:navigationIconTint="@color/primaryColor"
+            android:backgroundTint="@color/contentColor"
             app:title="Profile"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
@@ -164,6 +166,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Change Plan"
+                        android:backgroundTint="@color/contentColor"
                         android:textColor="@color/white"
                         android:textAllCaps="false"
                         android:textSize="14sp"
