--- a/app/src/main/res/layout/home_article_items.xml
+++ b/app/src/main/res/layout/home_article_items.xml
@@ -36,31 +36,47 @@
         app:layout_constraintTop_toTopOf="@+id/card_image"
         app:layout_constraintStart_toEndOf="@+id/card_image" />
 
+<!--    <TextView-->
+<!--        android:id="@+id/title_articles"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:maxWidth="200dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:ellipsize="end"-->
+<!--        android:maxLines="2"-->
+<!--        android:textColor="@color/secondaryColor"-->
+<!--        android:text="@string/sample_title_articles"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/card_image"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/btn_detail"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/card_image"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/card_image" />-->
+
     <TextView
         android:id="@+id/title_articles"
-        android:layout_width="wrap_content"
-        android:maxWidth="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textColor="@color/secondaryColor"
         android:text="@string/sample_title_articles"
-        app:layout_constraintBottom_toBottomOf="@+id/card_image"
+        android:textColor="@color/secondaryColor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_detail"
         app:layout_constraintStart_toEndOf="@+id/card_image"
-        app:layout_constraintTop_toTopOf="@+id/card_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btn_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18dp"
         android:background="@color/white"
+        android:backgroundTint="@color/primaryColor"
         android:src="@drawable/icon_expand_more"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/primaryColor"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
