countdown failed login

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -82,6 +82,7 @@
                         android:id="@+id/imgProfile"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:src="@drawable/profile_default"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -112,7 +113,7 @@
                         app:layout_constraintTop_toTopOf="@+id/tvFirstName" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/tvEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
