--- a/app/src/main/res/layout/activity_otpactivity.xml
+++ b/app/src/main/res/layout/activity_otpactivity.xml
@@ -74,18 +74,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnsendotp"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="@color/contentColor"
-            android:text="Send OTP"
-            android:textColor="@color/primaryColor"
-            android:textSize="18dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otplayout"/>
-        <Button
             android:id="@+id/btnverifydotp"
             android:layout_width="300dp"
             android:layout_height="60dp"
@@ -96,7 +84,7 @@
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnsendotp"/>
+            app:layout_constraintTop_toBottomOf="@+id/otplayout"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -114,7 +102,7 @@
                 android:text="Re-send the OTP code?"
                 android:textSize="14sp"
                 android:textAlignment="center"
-                android:id="@+id/signupText"
+                android:id="@+id/resendText"
                 android:textColor="@color/secPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
