--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,28 +38,6 @@
             android:layout_height="wrap_content"
             android:paddingBottom="16dp">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/linearLayoutButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/btn_wifi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="8dp"
-                    android:layout_marginEnd="8dp"/>
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_profile"
                 android:layout_width="match_parent"
@@ -67,8 +46,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 app:cardCornerRadius="16dp"
-                app:cardElevation="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayoutButton">
+                app:cardElevation="0dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -78,48 +56,51 @@
                     android:paddingStart="16dp">
 
                     <!-- Image on the left side -->
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/imgProfile"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/default_profile"
+                        android:scaleType="centerCrop"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="#DDDDDD"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/tvFirstName"
+                        android:id="@+id/tvFullName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="John"
-                        android:textColor="@color/black"
+                        android:text="John Doe"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@+id/imgProfile"
                         app:layout_constraintTop_toTopOf="@+id/imgProfile" />
 
                     <TextView
-                        android:id="@+id/tvLastName"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="Doe"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/tvFirstName"
-                        app:layout_constraintStart_toEndOf="@+id/tvFirstName"
-                        app:layout_constraintTop_toTopOf="@+id/tvFirstName" />
-
-                    <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/tvEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:text="johndoe@gmail.com"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toStartOf="@+id/tvFirstName"
-                        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />
+                        android:textSize="14sp"
+                        android:textColor="@color/secondaryColor"
+                        app:layout_constraintStart_toStartOf="@+id/tvFullName"
+                        app:layout_constraintTop_toBottomOf="@+id/tvFullName" />
+
+                    <TextView
+                        android:id="@+id/tvPhone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="+621234567890"
+                        android:textSize="14sp"
+                        android:textColor="@color/secondaryColor"
+                        app:layout_constraintStart_toStartOf="@+id/tvFullName"
+                        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
                     <ImageView
                         android:layout_width="24dp"
@@ -129,7 +110,7 @@
                         android:src="@drawable/icon_edit_profile"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/black" />
+                        app:tint="@color/secondaryColor" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -156,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Current Plan"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -167,7 +148,7 @@
                         android:layout_height="wrap_content"
                         android:text="Change Plan"
                         android:backgroundTint="@color/contentColor"
-                        android:textColor="@color/white"
+                        android:textColor="@color/primaryColor"
                         android:textAllCaps="false"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="@+id/plan"
@@ -178,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Silver Package"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         android:layout_marginTop="4dp"
@@ -191,7 +172,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:text="Speed up to 30 Mbps"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/current_plan" />
@@ -202,7 +183,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:text="Service Date : 15 September 2023"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/speed" />
@@ -213,7 +194,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:text="Location : Dharmasusada Indah VI No.100, Surabaya"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/date" />
@@ -225,7 +206,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_history_payment"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
@@ -245,7 +226,7 @@
                         android:layout_height="wrap_content"
                         android:text="History Payment"
                         android:textStyle="bold"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -253,7 +234,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_history_payment"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="100dp"
                         android:layout_marginTop="12dp"
                         app:layout_constraintTop_toBottomOf="@id/history_payment"/>
 
@@ -281,15 +262,15 @@
                         android:id="@+id/enabled_biometric_fingeprint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Enabled Biometric Fingerprint"
+                        android:text="Biometric Fingerprint"
                         android:textStyle="bold"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <Switch
-                        android:id="@+id/switch1"
+                        android:id="@+id/switchBiometric"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="-4dp"
@@ -323,9 +304,42 @@
                         android:layout_height="wrap_content"
                         android:text="Social Media"
                         android:textStyle="bold"
-                        android:textColor="@color/black"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/card_biometric_fingerprint">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:background="@drawable/article_item_bg">
+
+                    <TextView
+                        android:id="@+id/tv_logout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Logout"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/secondaryColor"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
