--- a/app/src/main/res/layout/articles_items.xml
+++ b/app/src/main/res/layout/articles_items.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="16dp"
+            android:layout_marginHorizontal="2dp"
+            android:layout_marginTop="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +45,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="14dp"
             app:layout_constraintTop_toBottomOf="@+id/card_image" />
 
         <TextView
