redesign, dark mode, package, edit profile

--- a/app/src/main/res/layout/activity_usage.xml
+++ b/app/src/main/res/layout/activity_usage.xml
@@ -20,7 +20,7 @@
             app:navigationIcon="@drawable/icon_back"
             app:navigationIconTint="@color/primaryColor"
             app:title="Traffic Usage"
-            app:titleTextColor="@color/primaryColor"
+            app:titleTextColor="@color/white"
             app:titleCentered="true"
             android:backgroundTint="@color/contentColor"/>
     </com.google.android.material.appbar.AppBarLayout>
