--- a/app/src/main/res/layout/fragment_articles.xml
+++ b/app/src/main/res/layout/fragment_articles.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.articles.ArticlesFragment">
+    tools:context=".ui.articles.ArticlesFragment"
+    android:background="@color/primaryColor">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -18,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="News Articles"
-            app:titleTextColor="@color/primaryColor"
+            app:titleTextColor="@color/white"
             android:backgroundTint="@color/contentColor"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
@@ -27,10 +28,10 @@
         android:id="@+id/rv_articles"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        tools:listitem="@layout/articles_items"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
