--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,140 +5,213 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.login.LoginActivity"
-    android:backgroundTint="@color/primaryColor">
+    tools:context=".ui.login.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/imageViewlogin"
-            android:layout_width="290dp"
-            android:layout_height="74dp"
-            android:background="@drawable/wownetlogo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="55dp"/>
+        android:layout_height="match_parent"
+        android:background="@color/primaryColor">
 
         <TextView
             android:id="@+id/textViewlogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:backgroundTint="@color/secPrimary"
-            android:text="Sign in to your account"
-            android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewlogin"
-            tools:layout_editor_absoluteX="40dp"
-            android:textAlignment="center" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:id="@+id/emaillayout"
-            app:layout_constraintTop_toBottomOf="@+id/textViewlogin"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="15dp"
-            style="@style/editTextStyle"
-            app:hintEnabled="false">
-
-            <com.example.capstoneproject.ui.customView.emailEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/email"
-                android:background="@drawable/cutom_edittext"
-                android:hint="Email"
-                style="@style/editTextStyle"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            app:passwordToggleEnabled="true"
-            android:id="@+id/passwordtext"
-            app:layout_constraintTop_toBottomOf="@+id/emaillayout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="15dp"
-            style="@style/editTextStyle"
-            app:hintEnabled="false">
-
-            <com.example.capstoneproject.ui.customView.passwordEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/password"
-                android:inputType="textPassword"
-                android:background="@drawable/cutom_edittext"
-                android:hint="Password"
-                style="@style/editTextStyle"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnlogin"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="@color/contentColor"
-            android:text="Login"
-            android:textColor="@color/primaryColor"
+            android:fontFamily="@font/montserrat_semi_bold"
+            android:text="Please sign in to continue."
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordtext"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <com.example.capstoneproject.ui.customView.emailEditText
+            android:id="@+id/etEmail"
+            style="@style/EditText"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:hint="Email"
+            android:imeOptions="actionNext"
+            android:textSize="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordtext"
+            style="@style/EditTextNoPadding"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            app:passwordToggleEnabled="true">
+
+            <com.example.capstoneproject.ui.customView.passwordEditText
+                android:id="@+id/etPassword"
+                style="@style/EditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_bg"
+                android:hint="Password"
+                android:inputType="textPassword" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/textforgotpassword"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_gravity="end"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/montserrat_medium"
+            android:gravity="end"
             android:text="Forgot Password?"
-            android:textAlignment="center"
             android:textColor="@color/secPrimary"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordtext" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="128dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnlogin"
-            android:layout_marginTop="190dp">
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="Don't have an account?"
-                android:textSize="14sp"
-                android:textAlignment="center"
                 android:id="@+id/signupText"
-                android:textColor="@color/secPrimary"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign Up "
+                android:padding="4dp"
+                android:text="Don't have an account yet?"
+                android:textAlignment="center"
+                android:textColor="@color/secPrimary"
+                android:textSize="14sp"
+                android:fontFamily="@font/montserrat_medium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/regishere"
+                android:layout_width="57dp"
+                android:layout_height="wrap_content"
+                android:text="sign up"
                 android:textAlignment="center"
                 android:textColor="@color/contentColor"
                 android:textSize="14sp"
-                android:id="@+id/regishere"
+                android:textStyle="italic"
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toEndOf="@+id/signupText"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Login"
+            android:textColor="@color/secondaryColor"
+            android:textSize="40dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:columnCount="2"
+            android:rowCount="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textforgotpassword">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btnLogin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:padding="8dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/cardview_border"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat_semi_bold"
+                        android:text="Login"
+                        android:textColor="@color/white" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.cardview.widget.CardView>
+
+
+<!--       Misalnya belum aktifin biometric ini visiblenya dimatiin aja-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btnBiometric"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="48dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cardview_border_no_padding"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/icon_fingerprint"
+                        app:tint="@color/white" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.cardview.widget.CardView>
+        </GridLayout>
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
