--- a/app/src/main/res/layout/articles_items.xml
+++ b/app/src/main/res/layout/articles_items.xml
@@ -4,59 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="16dp"
+    android:layout_marginLeft="16dp"
     android:layout_marginTop="16dp"
-    android:backgroundTint="@color/primaryColor">
+    android:layout_marginRight="16dp"
+    android:backgroundTint="@color/primaryColor"
+    app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        android:background="@drawable/article_item_bg">
+        android:background="@drawable/article_item_bg"
+        android:paddingBottom="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_image"
+
+        <ImageView
+            android:id="@+id/img_articles"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="16dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints">
+            tools:src="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/img_articles"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/avatars" />
-
-        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/title_articles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sample_title_articles"
-            android:textColor="@color/secondaryColor"
-            android:textSize="18sp"
-            android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/card_image" />
+            android:text="@string/sample_title_articles"
+            android:textColor="@color/secondaryColor"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/img_articles" />
 
         <TextView
             android:id="@+id/desc_articles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sample_description_articles"
-            android:textColor="@color/secondaryColor"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:textSize="16sp"
-            android:maxLines="3"
             android:ellipsize="end"
+            android:maxLines="3"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="@string/sample_description_articles"
+            android:textColor="@color/secondaryColor"
+            android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/title_articles" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
