--- a/app/src/main/res/layout/articles_more_items.xml
+++ b/app/src/main/res/layout/articles_more_items.xml
@@ -4,48 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="16dp"
-    android:layout_marginEnd="8dp"
-    android:backgroundTint="@color/primaryColor">
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
+    android:backgroundTint="@color/primaryColor"
+    app:cardCornerRadius="15dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        android:background="@drawable/article_item_bg">
+        android:background="@drawable/article_item_bg"
+        android:paddingBottom="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_image"
-            android:layout_width="0dp"
+
+        <ImageView
+            android:id="@+id/img_articles"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
-            app:cardCornerRadius="16dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints">
+            tools:src="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/img_articles"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/avatars" />
-
-        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/publish_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            android:fontFamily="@font/montserrat_medium"
             android:text="@string/sample_publish_date"
             android:textColor="@color/secondaryColor"
             android:textSize="14sp"
-            android:layout_marginTop="6dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_image" />
+            app:layout_constraintTop_toBottomOf="@+id/img_articles" />
 
         <TextView
             android:id="@+id/title_articles"
@@ -54,6 +48,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="6dp"
             android:ellipsize="end"
+            android:fontFamily="@font/montserrat_bold"
             android:maxLines="2"
             android:text="@string/sample_title_articles"
             android:textColor="@color/secondaryColor"
@@ -61,7 +56,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/publish_date"/>
+            app:layout_constraintTop_toBottomOf="@+id/publish_date" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
