--- a/app/src/main/res/layout/banner_items.xml
+++ b/app/src/main/res/layout/banner_items.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="15dp"
     app:cardElevation="0dp"
-    android:layout_marginHorizontal="12dp"
+    android:layout_marginHorizontal="16dp"
     android:backgroundTint="@color/primaryColor">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,17 +14,19 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="16dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="4:2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/img_banner"
                 android:layout_width="match_parent"
-                android:layout_height="215dp"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 tools:src="@tools:sample/avatars"/>
 
