--- a/app/src/main/res/layout/history_payment_items.xml
+++ b/app/src/main/res/layout/history_payment_items.xml
@@ -25,10 +25,10 @@
             android:id="@+id/title_invoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
             android:text="Invoice"
             android:textColor="@color/secondaryColor"
             android:textSize="14sp"
+            android:fontFamily="@font/montserrat_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,6 +40,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginStart="4dp"
             android:text="December 2023"
+            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/secondaryColor"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/title_invoice"
@@ -52,34 +53,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:text="IDR"
+            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/secondaryColor"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvInvoiceDate"
-            app:layout_constraintStart_toEndOf="@+id/tvInvoiceDate"
-            app:layout_constraintTop_toTopOf="@+id/tvInvoiceDate"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvPayment"
+            app:layout_constraintEnd_toStartOf="@+id/tvPayment"
+            app:layout_constraintTop_toTopOf="@+id/tvPayment" />
 
         <TextView
             android:id="@+id/tvPayment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="40dp"
             android:text="299.000"
+            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/secondaryColor"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvTitleIdr"
-            app:layout_constraintStart_toEndOf="@+id/tvTitleIdr"
-            app:layout_constraintTop_toTopOf="@+id/tvTitleIdr"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
             android:contentDescription="@null"
             android:src="@drawable/icon_download"
             app:layout_constraintBottom_toBottomOf="parent"
